  Changes:
    - Removed references to normal / expensive recipes (945)
    - Rebalance Tungsten Smelting Recipes (980)
    - Adjusted the recipes for Bob's Assembling Machines (985)
    - Moved Cement Processing techs up a science pack tier so Clay Bricks are not available so early in the game (991)
    - Updated for Factorio 2.0 (994)
    - Added circuit connectors to all machines (1114)
  Bugfixes:
    - Fixed coolant production graphs (1000)
    - Moved Cobalt Oxide 1 recipe from Ore processor to Chemical furnace (1006)
---------------------------------------------------------------------------------------------------
Version: 0.6.23
Date: 21.02.2024
  Changes:
    - Steel casting does not need to force enable all iron ore products
---------------------------------------------------------------------------------------------------
Version: 0.6.22
Date: 22.12.2023
  Changes:
    - Increased the tech and required machine tier of Chrome and Platinum (909)
    - Allow Fibreglass boards to be made in Bob's Electronics assembling machines (921)
    - Enabled productivity modules for Glass, Glass fiber, and Fibreglass recipes (929)
    - Added water to recipe Glass fiber casting 1. Added new recipe Glass fiber casting 2 (939)
  Bugfixes:
    - Another attempt at fixed smoke on the blast furnace
    - Fixed names and descriptions of Bronze processing and Brass processing techs from Bob's MCI mod (926)
---------------------------------------------------------------------------------------------------
Version: 0.6.21
Date: 23.02.2023
  Changes:
    - Glass fiber now requires Strand Casting Machine 2 (unless Angel's Industries Components Overhaul is enabled) (890)
    - Added missing prerequisites. Some recipes could be researched before a machine for it was unlocked (890)
    - Changed recipes to require Crystallizer rather than Crystallizer 2 (890)
      - Crystal catalyst
      - Gem ores
      - Raw crystal splinter