@@ -114,5 +114,6 @@ if angelsmods.trigger.smelting_products["cobalt-steel"].plate then
     data.raw["item"]["bob-cobalt-steel-alloy"].icon_size = 32
     OV.add_prereq("bob-cobalt-processing", "angels-cobalt-steel-smelting-1")
     angelsmods.functions.allow_productivity("angels-plate-cobalt-steel")
+    OV.set_research_difficulty("bob-cobalt-processing", "bob-cobalt-steel-alloy", 10, "craft-item")
   end
 end
