@@ -102,8 +102,8 @@ if angelsmods.trigger.smelting_products["silicon"].wafer then
         order = "l[angels-silicon-wafer]",
       },
     })
-    OV.global_replace_technology("bob-silicon-processing", "angels-silicon-smelting-1")
-    OV.add_unlock("angels-silicon-smelting-1", "bob-silicon-wafer")
+    OV.add_prereq("bob-silicon-processing", "angels-silicon-smelting-1")
+    OV.set_research_difficulty("bob-silicon-processing", "angels-mono-silicon", 10, "craft-item")
   end
 else
   angelsmods.functions.hide("angels-silicon-wafer")
@@ -142,8 +142,8 @@ if angelsmods.trigger.smelting_products["silicon"].powder then
       },
     })
     angelsmods.functions.remove_productivity("bob-silicon-powder")
-    OV.global_replace_technology("bob-silicon-processing", "angels-silicon-smelting-1")
-    OV.add_unlock("angels-silicon-smelting-1", "bob-silicon-powder")
+    OV.add_prereq("bob-silicon-processing", "angels-silicon-smelting-1")
+    OV.set_research_difficulty("bob-silicon-processing", "angels-mono-silicon", 10, "craft-item")
 
     -- silicon powder derivatives
     angelsmods.functions.move_item("bob-silicon-nitride", "angels-silicon-casting", "m[bobs-silicon]-a")
